--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,12 @@
 @tailwind utilities;
 
 :root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
+
+    font-family: "Red Hat Text", serif;
+    font-optical-sizing: auto;
     font-weight: 400;
+    font-style: normal;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
